setup/MicroK8SDashboard/kubernetes-dashboard-ingress.yaml
---
# Kubernetes Dashboard Ingress Configuration - Loacal reachable with SSL
# Ingress for Kubernetes Dashboard with SSL, DDoS protection, and local network restriction.
# Edit the 'host', 'tls', and 'whitelist-source-range' as needed for your environment.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # DDoS - Limitation
    nginx.ingress.kubernetes.io/limit-rps: "5"
    nginx.ingress.kubernetes.io/limit-rpm: "300"
    nginx.ingress.kubernetes.io/limit-connections: "10"
    nginx.ingress.kubernetes.io/whitelist-source-range: 127.0.0.1/8,169.254.0.0/16,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16 # Allow local access
    cert-manager.io/cluster-issuer: k8s-issuer
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  ingressClassName: public
  tls:
  - hosts:
      - ${K8S_ENVIRONMENT}.dashboard.slainte.at
    secretName: k8s-dashboard-slainte-at
  rules:
  - host: ${K8S_ENVIRONMENT}.dashboard.slainte.at
    http:
      paths:
      - backend:
          service:
            name: kubernetes-dashboard-kong-proxy # Microk8s 1.34+
            port:
              number: 443
        path: /
        pathType: Prefix
---
